# systemd-monitoring-mcp

./: AGENT.md  AGENTS.md  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: _lint.yml  _test.yml  main-ci.yml  pr-ci.yml  release.yml
docs/: implementation-plan.md  improvement-ideas.md  requirements.md  security.md  test-cases.md
scripts/: smoke-test.sh
src/: api.rs  auth.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  podman.rs  rate_limit.rs  systemd_client.rs  tests.rs
src/domain/: mod.rs  resources.rs  responses.rs  tools.rs  utils.rs
src/domain/tools/: logs.rs  podman.rs  services.rs  timers.rs  unit_status.rs
src/http/: handlers.rs  mod.rs
src/mcp/: mod.rs  rpc.rs  server.rs
