[package]
name = "systemd-monitoring-mcp"
version = "0.7.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rust-mcp-sdk = { version = "0.8.3", default-features = false, features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
systemd = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zbus = { version = "5", features = ["tokio"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
